# brainfuck

./: .gitignore  LICENSE  README.md  brainfuck.cabal
samples/: cgbfi1.b  hello.bf
src/: .Main.hs.swp  Main.hs
src/Data/Language/: Brainfuck.hs
src/Data/Language/Brainfuck/: Interpreter.hs  Optimizer.hs  Parser.hs  Types.hs
src/lib/Data/Language/: Brainfuck.hs
src/lib/Data/Language/Brainfuck/: Optimizer.hs  Parser.hs
