name:                brainfuck
version:             0.3.0.0
synopsis:            A basic Brainfuck interpreter in Haskell
description:         A basic Brainfuck interpreter in Haskell
homepage:            http://github.com/frerich/brainfuck
license:             BSD3
license-file:        LICENSE
author:              Frerich Raabe
maintainer:          frerich.raabe@gmail.com
copyright:           Copyright (c) 2014 Frerich Raabe <Frerich.raabe@gmail.com>
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
    type:       git
    location:   http://github.com/frerich/brainfuck

library
  exposed-modules:     Data.Language.Brainfuck
  other-modules: Data.Language.Brainfuck.Interpreter
               , Data.Language.Brainfuck.Optimizer
               , Data.Language.Brainfuck.Parser
               , Data.Language.Brainfuck.Types
  build-depends:       base >=4.6 && <4.11, vector >=0.10 && <0.13
  default-language:    Haskell2010
  hs-source-dirs:      src/lib
  ghc-options:         -Wall

executable brainfuck
  main-is:             Main.hs
  other-extensions:    DeriveDataTypeable
  build-depends:       base >=4.6 && <4.11, vector >=0.10 && <0.13, brainfuck
  hs-source-dirs:      src/interp
  default-language:    Haskell2010
  ghc-options:         -Wall
